Update color settings in Hypr and Kitty, modify image visibility in SwayNC configuration, fix CSS padding issues in SwayNC, and clean up Waybar configuration and styles.

--- a/swaync/style.css
+++ b/swaync/style.css
@@ -9,9 +9,9 @@
 
 @keyframes fadeIn{
 0% {
-    padding-left:20;
-    margin-left:50;
-    margin-right:50;
+    padding-left:20px;
+    margin-left:50px;
+    margin-right:50px;
 }
 100% {
     padding:0;
@@ -72,7 +72,7 @@
     padding-right:10px;
 }
 
-.control-center .notification-row .notification-background .notification..notification-content image,
+.control-center .notification-row .notification-background .notification.low .notification-content image,
 .control-center .notification-row .notification-background .notification.normal .notification-content image,
 .floating-notifications.background .notification-background .notification.low .notification-content image,
 .floating-notifications.background .notification-background .notification.normal .notification-content image {
@@ -105,7 +105,7 @@
 
 }
 .notification-content{
-    padding:5;
+    padding:5px;
 }
 .control-center .notification-row .notification-background .notification .notification-content .summary,
 .floating-notifications.background .notification-background .notification .notification-content .summary {
