--- a/waybar/style.css
+++ b/waybar/style.css
@@ -140,6 +140,9 @@ tooltip {
   color: rgba(255, 255, 255, 0.2);
   text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5);
 }
+/* #custom-colorpicker {
+  padding: 0px 5px;
+} */
 #cpu,
 #memory,
 #temperature {
